Added Home Style

--- a/app/views/pages/inicio.html.erb
+++ b/app/views/pages/inicio.html.erb
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>Map Soluciones</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet">
@@ -72,14 +72,13 @@
 
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
+       <div class="bg">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Ideas para el crecimiento de su empresa</h1>
-                    <p>Trabajamos para el mejorar el servicio de nuestros clientes</p>
-                </div>
-            </div>
-        </div>
+    <a class="logo-inicio"><%= image_tag("map-white.svg", :width => 240, :class => 'img') %></a>
+   <h2>Ideas para el <br /> crecimiento de su empresa</h2>
+   <h3>Trabajamos para mejorar el servicio a nuestros clientes</h3>
+</div>
+</div>
     </section>
 
     <!-- About Section -->
@@ -88,6 +87,40 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>SERVICIOS</h1>
+                    <div class="center">
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= image_tag("holder.svg", :alt => "Brand") %>
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= image_tag("holder.svg", :alt => "Brand") %>
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= image_tag("holder.svg", :alt => "Brand") %>
+      <div class="caption">
+        <h3>Thumbnail label</h3>
+        <p>...</p>
+        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
                     <a class="btn btn-default page-scroll" href="/pages/servicios">Ver nuestros servicios</a>
                 </div>
             </div>
