--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,46 @@
 @import 'bootstrap';
+
+
+body {
+  background-color: #F5F5F1;
+  color: #333333;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.bg {
+	height:100%;
+  background-image: url('servers.png');
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: right top;
+  }
+
+  h2{
+  	text-align: left;
+  	font-family: 'Oswald', sans-serif;
+  	font-size: 3em;
+  	color: #fff;
+  	text-transform: uppercase;
+  	margin-bottom: 2px !important;
+  }
+ 
+ h3{
+  	text-align: left;
+  	font-family: 'Oswald', sans-serif;
+  	font-size: 1.5em;
+  	color: #e97231;
+  	text-transform: uppercase;
+  }
+ 
+ img {
+  	vertical-align: middle;
+  	text-align: left;
+  	margin-right: 75%;
+  }
+ 
+
+  
