--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,7 +13,7 @@ h1 {
 
 .bg {
 	height:100%;
-  background-image: image-url('bgserver.png');
+  background-image: url(' http://dl.dropbox.com/s/shbhxsf4fpr08h2/bg-server.png');
   background-size: 50%;
   background-repeat: no-repeat;
   background-position: right top;
