--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,20 @@ h1 {
   	color: #e97231;
   	text-transform: uppercase;
   }
+
+  h6{
+    vertical-align: middle;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.5em;
+    color: #fff;
+    text-transform: uppercase;
+    border: 1px solid #e97231;
+    background-color: #e97231;
+    width: 350px;
+    margin: auto;
+    margin-bottom: 5%;
+    border-radius: 4px;
+  }
  
  img {
   	vertical-align: middle;
@@ -42,5 +56,41 @@ h1 {
   	margin-right: 75%;
   }
  
+ h7{
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.0em;
+    color: #e97231;
+    text-transform: uppercase;
+  }
 
-  
+  h8{
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.0em;
+    color: #000000;
+    text-transform: uppercase;
+  }
+
+  /* Inset, by Dan Eden */
+    
+hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+h9{
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.5em;
+    color: #e97231;
+    text-transform: uppercase;
+  }
+  h10{
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.0em;
+    color: #fff;
+    text-transform: uppercase;
+  }
