--- a/app/views/pages/inicio.html.erb
+++ b/app/views/pages/inicio.html.erb
@@ -86,36 +86,42 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>SERVICIOS</h1>
+                    <h6>NUESTROS SERVICIOS</h6>
                     <div class="center">
 <div class="row">
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-6 col-md-3">
     <div class="thumbnail">
-      <%= image_tag("holder.svg", :alt => "Brand") %>
+      <%= image_tag("icon.png", :alt => "Brand") %>
       <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <h7>Diseño y Matenimiento Web</h7>
+        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-6 col-md-3">
     <div class="thumbnail">
-      <%= image_tag("holder.svg", :alt => "Brand") %>
+      <%= image_tag("search.png", :alt => "Brand") %>
       <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <h7>Mantenimiento Preventivo</h7>
+        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
       </div>
     </div>
   </div>
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-6 col-md-3">
     <div class="thumbnail">
-      <%= image_tag("holder.svg", :alt => "Brand") %>
+      <%= image_tag("cart.png", :alt => "Brand") %>
       <div class="caption">
-        <h3>Thumbnail label</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <h7>Venta de Hardware</h7>
+        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+      <%= image_tag("like.png", :alt => "Brand") %>
+      <div class="caption">
+        <h7>Asesoría y Venta de Redes</h7>
+        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
       </div>
     </div>
   </div>
@@ -132,7 +138,38 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>PRODUCTOS</h1>
+                    <h6>NUESTROS PRODUCTOS</h6>
+                     <div class="center">
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= image_tag("default.jpg", :alt => "Brand") %>
+      <div class="caption">
+        <h7>Producto 1</h7>
+        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= image_tag("default.jpg", :alt => "Brand") %>
+      <div class="caption">
+        <h7>Producto 2</h7>
+        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= image_tag("default.jpg", :alt => "Brand") %>
+      <div class="caption">
+        <h7>Producto 3</h7>
+        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
                     <a class="btn btn-default page-scroll" href="/listings">Ver mas productos</a>
                 </div>
             </div>
@@ -144,19 +181,76 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>NOSOTROS</h1>
+                    <h6>NUESTROS CLIENTES</h6>
+                    <h8>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</h8> </br></br></br>
+                     <div class="center">
+<div class="row">
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+      <%= image_tag("client1.png", :alt => "Brand") %>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+      <%= image_tag("client2.png", :alt => "Brand") %>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+      <%= image_tag("client3.png", :alt => "Brand") %>
+    </div>
+  </div>
+   <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+      <%= image_tag("client4.png", :alt => "Brand") %>
+    </div>
+  </div>
+</div>
+</div>
+<hr></hr>
+<h9>QUE DICEN NUESTROS CLIENTES</h9></br></br>
+<p class="lead">“Lorem ipsum dolor sit amet, consectetur adipiscing elit mauris necip  at lacus commodo suscipit pr fastime"</p></br></br>
                     <a class="btn btn-default page-scroll" href="/pages/nosotros">Nuestro Equipo</a>
                 </div>
             </div>
         </div>
     </section>
     <!-- Services Section -->
-    <section id="contacto" class="services-section">
+    <section id="contacto" class="contacto-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>CONTACTO</h1>
-                    <a class="btn btn-default page-scroll" href="/pages/contacto">Contactenos</a>
+                    <h6>CONTACTO</h6>
+                    <div class="center">
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("phone.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br>+506 2228-0000</h10>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("phone2.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br>+506 2228-0000</h10>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("mail.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br><a href="mailto:info@mapsoluciones.com?Subject=Contacto%20MapSoluciones" target="_top">info@mapsoluciones.com</a>
+</p></h10>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+                    <a class="btn btn-default page-scroll" href="/pages/contacto">Enviarnos un mensaje</a>
                 </div>
             </div>
         </div>
