--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -71,37 +71,71 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="intro-section">
+    <section id="intro" class="product-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                   <h1>Listing listings</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <td><%= listing.name %></td>
-        <td><%= listing.description %></td>
-        <td><%= link_to 'Show', listing %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+ <h6>Productos</h6>
+                    <div class="row">
+        <% @listings.each do |listing| %>
+  <div class="col-md-3">
+    <div class="thumbnail-product">
+      <%= image_tag listing.image.url (:medium) %>
+      <div class="caption">
+        <h3><%= listing.name %></h3>
+        <p><%= listing.description %></p>
+        <%= link_to 'Show', listing %>
+        <%= link_to 'Edit', edit_listing_path(listing) %>
+        <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %>
+        
+      </div>
+    </div>
+  </div>
+  <% end %>
+</div>
 <br>
 
-<%= link_to 'New Listing', new_listing_path %>
+<%= link_to 'New Listing', new_listing_path %> <br>
+<br>
+                </div>
+            </div>
+        </div>
+    </section>
+     <section id="contacto" class="contacto-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h6>CONTACTO</h6>
+                    <div class="center">
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("phone.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br>+506 2228-0000</h10>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("phone2.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br>+506 2228-0000</h10>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("mail.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br><a href="mailto:info@mapsoluciones.com?Subject=Contacto%20MapSoluciones" target="_top">info@mapsoluciones.com</a>
+</p></h10>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+                    <a class="btn btn-default page-scroll" href="/pages/contacto">Enviarnos un mensaje</a>
                 </div>
             </div>
         </div>
