--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -76,22 +76,61 @@
             <div class="row">
                 <div class="col-lg-12">
                  <p id="notice"><%= notice %></p>
+<div class=:"row">
+    <div class="col-md-6">
+        <div class="thumbnail">
+        <%= image_tag @listing.image.url %>
+    </div>
+    </div>
+     <div class="col-md-6">
+        <h3><%= @listing.name %></h3>
+        <p><%= @listing.description %></p>
+    </div>
+</div>
 
-<%= image_tag @listing.image.url(:medium) %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @listing.name %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @listing.description %>
-</p>
-
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
+                </div>
+                <%= link_to 'Edit', edit_listing_path(@listing) %> |
 <%= link_to 'Back', listings_path %>
-
+            </div>
+        </div>
+    </section>
+     <section id="contacto" class="contacto-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h6>CONTACTO</h6>
+                    <div class="center">
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("phone.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br>+506 2228-0000</h10>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("phone2.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br>+506 2228-0000</h10>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("mail.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br><a href="mailto:info@mapsoluciones.com?Subject=Contacto%20MapSoluciones" target="_top">info@mapsoluciones.com</a>
+</p></h10>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+                    <a class="btn btn-default page-scroll" href="/pages/contacto">Enviarnos un mensaje</a>
                 </div>
             </div>
         </div>
