--- a/app/assets/stylesheets/scrolling-nav.css
+++ b/app/assets/stylesheets/scrolling-nav.css
@@ -49,6 +49,13 @@ of those sections to manage the look and feel of the site. */
     text-align: center;
     background: #2e3e4f;
 }
+
+.form-section {
+    height: 100%;
+    padding-top: 150px;
+    text-align: center;
+    background: #2e3e4f;
+}
 .product-section {
     height: auto;
     padding-top: 150px;
