--- a/app/views/pages/contacto.html.erb
+++ b/app/views/pages/contacto.html.erb
@@ -71,62 +71,51 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="intro-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Ideas para el crecimiento de su empresa</h1>
-                    <p>Trabajamos para el mejorar el servicio de nuestros clientes</p>
-                </div>
+    <section id="intro" class="form-section">
+       <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="well well-sm">
+          <form class="form-horizontal" action="" method="post">
+          <fieldset>
+            <legend class="text-center">Contactenos</legend>
+    
+            <!-- Name input-->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="name">Nombre</label>
+              <div class="col-md-9">
+                <input id="name" name="name" type="text" placeholder="Su nombre" class="form-control">
+              </div>
             </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="servicios" class="about-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>SERVICIOS</h1>
-                    <a class="btn btn-default page-scroll" href="/pages/servicios">Ver nuestros servicios</a>
-                </div>
+    
+            <!-- Email input-->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="email">E-mail</label>
+              <div class="col-md-9">
+                <input id="email" name="email" type="text" placeholder="Su email" class="form-control">
+              </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="productos" class="services-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>PRODUCTOS</h1>
-                    <a class="btn btn-default page-scroll" href="/listings">Ver mas productos</a>
-                </div>
+    
+            <!-- Message body -->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="message">Su mensaje</label>
+              <div class="col-md-9">
+                <textarea class="form-control" id="message" name="message" placeholder="Favor escriba su mensaje aquí..." rows="5"></textarea>
+              </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="nosotros" class="contact-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>NOSOTROS</h1>
-                    <a class="btn btn-default page-scroll" href="/pages/nosotros">Nuestro Equipo</a>
-                </div>
+    
+            <!-- Form actions -->
+            <div class="form-group">
+              <div class="col-md-12 text-right">
+                <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+              </div>
             </div>
+          </fieldset>
+          </form>
         </div>
-    </section>
-    <!-- Services Section -->
-    <section id="contacto" class="services-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>CONTACTO</h1>
-                    <a class="btn btn-default page-scroll" href="/pages/contacto">Contactenos</a>
-                </div>
-            </div>
-        </div>
+      </div>
+    </div>
+</div>
     </section>
 
     <!-- jQuery -->
