--- a/app/views/pages/servicios.html.erb
+++ b/app/views/pages/servicios.html.erb
@@ -72,14 +72,13 @@
 
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
+         <div class="bg-servicios">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Ideas para el crecimiento de su empresa</h1>
-                    <p>Trabajamos para el mejorar el servicio de nuestros clientes</p>
-                </div>
-            </div>
-        </div>
+            <a><%= image_tag("setting4.svg", :width => 80, :class => 'icon-servicios') %></a>
+   <h2>NUESTROS SERVICIOS</h2>
+   <h3>Trabajamos para mejorar el servicio a nuestros clientes</h3>
+</div>
+</div>
     </section>
 
     <!-- About Section -->
@@ -94,40 +93,6 @@
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="productos" class="services-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>PRODUCTOS</h1>
-                    <a class="btn btn-default page-scroll" href="/listings">Ver mas productos</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="nosotros" class="contact-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>NOSOTROS</h1>
-                    <a class="btn btn-default page-scroll" href="/pages/nosotros">Nuestro Equipo</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Services Section -->
-    <section id="contacto" class="services-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>CONTACTO</h1>
-                    <a class="btn btn-default page-scroll" href="/pages/contacto">Contactenos</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
