added products on homepage

--- a/app/views/pages/inicio.html.erb
+++ b/app/views/pages/inicio.html.erb
@@ -143,28 +143,44 @@
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <%= image_tag("default.jpg", :alt => "Brand") %>
+      <%= image_tag("image002.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Producto 1</h7>
-        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+        <h7>Epson Expression XP-211</h7>
+        <p>Impresora multifunción – color  – chorro de tinta <br>
+•        Letter A (216 x 279 mm)/A4 (210 x 297 mm)<br>
+•        216 x 1117 mm (material) <br>        
+•        hasta 12 ppm (copiando)<br>
+•        hasta 26 ppm (impresión)<br>
+•        50 hojas<br>
+•        USB 2.0, Wi-Fi(n)</p>
       </div>
     </div>
   </div>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <%= image_tag("default.jpg", :alt => "Brand") %>
+      <%= image_tag("image013.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Producto 2</h7>
-        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+        <h7>Lenovo ThinkPad T440p 20AN</h7>
+        <p>Core i5 4200M / 2.5 GHz - Microsoft Windows 7 Pro 64-bit / retroceso a 8 Pro 64-bit Edition<br>
+        •        preinstalado: Windows 7<br>
+•        4 GB RAM<br>
+•        500 GB HDD<br>
+•        Intel HD Graphics 4600<br>
+•        actualizable 3G/4G<br></p>
       </div>
     </div>
   </div>
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <%= image_tag("default.jpg", :alt => "Brand") %>
+      <%= image_tag("image014.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Producto 3</h7>
-        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+        <h7>HP ProLiant ML310e</h7>
+        <p>Generation 8 (Gen8) v2 SATA<br>
+          · Intel Quad Core Xeon<br>
+·         Memoria 8 GB DDR3 Unbuffered<br>
+·         Tarjeta de Red (1) HP Ethernet 1Gb<br>
+·         Disco Duro 2TB / Max 16 TB (4 x 4TB)<br>
+·         GarantÍa 3-year Next Day Parts replacement, 3-year labor, 3-Year Onsite support</p>
       </div>
     </div>
   </div>
@@ -257,15 +273,14 @@
     </section>
 
     <!-- jQuery -->
-     <%= javascript_include_tag 'jquery', 'data-turbolinks-track' => true %>
+    <script src="javascripts/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <%= javascript_include_tag 'bootstrap.min', 'data-turbolinks-track' => true %>
+    <script src="javascripts/bootstrap.min.js"></script>
 
     <!-- Scrolling Nav JavaScript -->
-    <%= javascript_include_tag 'jquery.easing.min', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'scrolling-nav.js', 'data-turbolinks-track' => true %>
-  
+    <script src="javascripts/jquery.easing.min.js"></script>
+    <script src="javascripts/scrolling-nav.js"></script>
 
 </body>
 
