--- a/app/views/pages/inicio.html.erb
+++ b/app/views/pages/inicio.html.erb
@@ -197,7 +197,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h6>NUESTROS CLIENTES</h6>
+                    <h6>NUESTRAS MARCAS</h6>
                     <h8>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</h8> </br></br></br>
                      <div class="center">
 <div class="row">
@@ -224,9 +224,6 @@
 </div>
 </div>
 <hr></hr>
-<h9>QUE DICEN NUESTROS CLIENTES</h9></br></br>
-<p class="lead">“Lorem ipsum dolor sit amet, consectetur adipiscing elit mauris necip  at lacus commodo suscipit pr fastime"</p></br></br>
-                    <a class="btn btn-default page-scroll" href="/pages/nosotros">Nuestro Equipo</a>
                 </div>
             </div>
         </div>
