--- a/app/views/pages/inicio.html.erb
+++ b/app/views/pages/inicio.html.erb
@@ -102,7 +102,7 @@
     <div class="thumbnail">
       <%= image_tag("search.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Mantenimiento Preventivo</h7>
+        <h7>Mantenimiento Preventivo<br> y Correctivo</h7>
         <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
       </div>
     </div>
@@ -120,7 +120,7 @@
     <div class="thumbnail">
       <%= image_tag("like.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Asesoría y Venta de Redes</h7>
+        <h7>Servicio de IT Outsourcing </h7>
         <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
       </div>
     </div>
@@ -240,7 +240,7 @@
     <div class="tombnail">
       <%= image_tag("phone.png", :alt => "Brand") %>
       <div class="caption">
-        <h10></br>+506 2228-0000</h10>
+        <h10></br>+506 40101111</h10>
       </div>
     </div>
   </div>
@@ -248,7 +248,7 @@
     <div class="tombnail">
       <%= image_tag("phone2.png", :alt => "Brand") %>
       <div class="caption">
-        <h10></br>+506 2228-0000</h10>
+        <h10></br>+506 40101111</h10>
       </div>
     </div>
   </div>
