--- a/app/views/pages/inicio.html.erb
+++ b/app/views/pages/inicio.html.erb
@@ -93,8 +93,8 @@
     <div class="thumbnail">
       <%= image_tag("icon.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Diseño y Matenimiento Web</h7>
-        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+        <h7>Servicios de Tecnología</h7>
+        <p>Servicio de it outsourcing, servicio relacionados con infraestructura de computo </p>
       </div>
     </div>
   </div>
@@ -102,8 +102,8 @@
     <div class="thumbnail">
       <%= image_tag("search.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Mantenimiento Preventivo<br> y Correctivo</h7>
-        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+        <h7>Venta de equipo de<br> infraestructura tecnológica</h7>
+        <p>Servidores, almacenamiento como San, Sistemas convergentes, Soluciones de virtualizacion diseno de redes, Switches, Redes inalámbricas, Diseño de soluciones de alta disponibilidad</p>
       </div>
     </div>
   </div>
@@ -111,17 +111,17 @@
     <div class="thumbnail">
       <%= image_tag("cart.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Venta de Hardware</h7>
-        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+        <h7>Venta de equipos de cómputo</h7>
+        <p>Laptops, desktops, tablets, Impresoras de inyeccion de tinta, laser y de punto de venta, soluciones de camaras de seguridad, proyectores.</p>
       </div>
     </div>
   </div>
   <div class="col-sm-6 col-md-3">
     <div class="thumbnail">
-      <%= image_tag("like.png", :alt => "Brand") %>
+      <%= image_tag("finance.png", :alt => "Brand") %>
       <div class="caption">
-        <h7>Servicio de IT Outsourcing </h7>
-        <p>Lorem ipsum dolor sit amet,  consectetur adipiscing elit.  Mauris nec ipsum at lacus  commodo susci</p>
+        <h7>Map Finance</h7>
+        <p>Leasing operativo para tecnología</p>
       </div>
     </div>
   </div>
