--- a/app/views/pages/inicio.html.erb
+++ b/app/views/pages/inicio.html.erb
@@ -74,7 +74,7 @@
     <section id="intro" class="intro-section">
        <div class="bg">
         <div class="container">
-    <a class="logo-inicio"><%= image_tag("map-white.svg", :width => 240, :class => 'img') %></a>
+    <a class="logo-inicio"><%= image_tag("map-white.svg", :width => 240, :style => 'margin-right: 75%;') %></a>
    <h2>Ideas para el <br /> crecimiento de su empresa</h2>
    <h3>Trabajamos para mejorar el servicio a nuestros clientes</h3>
 </div>
@@ -222,8 +222,17 @@
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="col-sm-6 col-md-3">
+    <div class="thumbnail">
+    <%= link_to image_tag("client5.png", :alt => "Brand", :width => 150), "http://partners.carbonite.com/mapsoluciones", :target => "_blank" %>
+    </div>
+  </div>
 </div>
+                  </div>
+
 <hr></hr>
+
                 </div>
             </div>
         </div>
