--- a/app/views/pages/servicios.html.erb
+++ b/app/views/pages/servicios.html.erb
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="css/one-page-wonder.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -82,12 +83,97 @@
     </section>
 
     <!-- About Section -->
-    <section id="servicios" class="about-section">
+    <section >
+        <!-- Page Content -->
+    <div class="container">
+
+        <hr class="featurette-divider">
+
+        <!-- First Featurette -->
+        <div class="featurette" id="about">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <h2 class="featurette-heading">Servicios de
+                <span class="text-muted">Help Desk</span>
+            </h2>
+            <p class="lead">Un servicio integral de soporte (Helpdesk) a usuarios de los distintos puntos de venta y administración de infraestructura para mejorar los niveles de servicio a usuarios, con procesos basados en mejores prácticas que ayudan a disminuir los costos de la operación, asegurar la continuidad del servicio a la Empresa y garantizar el cumplimiento por medio de SLA's (Service level agreement).</p>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <!-- Second Featurette -->
+        <div class="featurette" id="services">
+            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <h2 class="featurette-heading">Soporte a
+                <span class="text-muted">Usuarios de TI</span>
+            </h2>
+            <p class="lead">Nos hacemos cargo de una parte o la totalidad de la función de soporte a usuarios de nuestros clientes. Podemos asignar personal especializado por evento o de tiempo completo en las instalaciones de nuestros cliente, a un menor costo de tener personal asignado para estas funciones.</p>
+            <p class="lead">Beneficios<br>
+                <ul>
+                    <li>MEJORE SU NIVEL DE SERVICIO BAJANDO SUS COSTOS POR USUARIOS</li>
+                    <li>NOS ENCARGAMOS DE  SOPORTAR A SUS USUARIOS  Y A SU INFRAESTRUCTURA</li>
+                    <li>DEJE EN MANOS DE EXPERTOS EL SOPORTE A SUSU UAURIOS DE TI</li>
+                    <li>CUMPLIMOS LOS NIVELS DE SERVICIOS REQUERIDOS (SLA’S)</li>
+                </ul>
+            </p> 
+
+        </div>
+
+        <hr class="featurette-divider">
+
+        <!-- Third Featurette -->
+        <div class="featurette" id="contact">
+            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <h2 class="featurette-heading">Servicios
+                <span class="text-muted">Especializados</span>
+            </h2>
+            <p class="lead">Instalación e Implementación de Windows Server 2003, 2008, 2008 r2, 2012, con roles como:</p>
+            <p class="lead">Beneficios<br>
+                <ul>
+                    <li>MEJORE SU NIVEL DE SERVICIO BAJANDO SUS COSTOS POR USUARIOS</li>
+                    <li>NOS ENCARGAMOS DE  SOPORTAR A SUS USUARIOS  Y A SU INFRAESTRUCTURA</li>
+                    <li>DEJE EN MANOS DE EXPERTOS EL SOPORTE A SUSU UAURIOS DE TI</li>
+                    <li>CUMPLIMOS LOS NIVELS DE SERVICIOS REQUERIDOS (SLA’S)</li>
+                </ul>
+            </p> 
+        </div>
+
+        <hr class="featurette-divider">
+    </section>
+    <section id="contacto" class="contacto-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>SERVICIOS</h1>
-                    <a class="btn btn-default page-scroll" href="/pages/servicios">Ver nuestros servicios</a>
+                    <h6>CONTACTO</h6>
+                    <div class="center">
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("phone.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br>+506 40101111</h10>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("phone2.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br>+506 40101111</h10>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6 col-md-4">
+    <div class="tombnail">
+      <%= image_tag("mail.png", :alt => "Brand") %>
+      <div class="caption">
+        <h10></br><a href="mailto:info@mapsoluciones.com?Subject=Contacto%20MapSoluciones" target="_top">info@mapsoluciones.com</a>
+</p></h10>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+                    <a class="btn btn-default page-scroll" href="/pages/contacto">Enviarnos un mensaje</a>
                 </div>
             </div>
         </div>
